# opl-toolbox

./: .gitignore  COPYING  LICENSE  README.md  main.py  meson.build  org.gnome.oplhelper.json  org.wesleydmscn.opltoolbox.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
data/: meson.build  org.gnome.oplhelper.appdata.xml.in  org.gnome.oplhelper.desktop.in  org.gnome.oplhelper.gschema.xml  org.wesleydmscn.opltoolbox.desktop.in  org.wesleydmscn.opltoolbox.gschema.xml  org.wesleydmscn.opltoolbox.metainfo.xml.in
data/icons/: meson.build
modules/create_conf_cfg/: create_conf_cfg.py
modules/file_management/: find_files_by_type.py  popstarter.py
modules/prompts/: conf_options.py
po/: POTFILES  meson.build
src/: main.js  main.py  meson.build  oplhelper.gresource.xml  oplhelper.in  org.wesleydmscn.opltoolbox.data.gresource.xml  org.wesleydmscn.opltoolbox.src.gresource.xml  window.js  window.py  window.ui
